<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditosFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/baby_blue"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="35dp"
            android:paddingEnd="20dp"
            android:paddingBottom="45dp">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/creditos_title"
                android:textAlignment="center"
                android:textColor="@color/navy_blue"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/app_name_creditos"
                android:textColor="@color/navy_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/app_description_creditos"
                android:textAlignment="textStart"
                android:textColor="@color/navy_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/contenido_title_creditos"
                android:textColor="@color/navy_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/luz_maria"
                android:textColor="@color/navy_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/icono_title_creditos"
                android:textColor="@color/navy_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/sandra_patricia"
                android:textColor="@color/navy_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/desarrollo_creditos"
                android:textColor="@color/navy_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/yolanda_martinez"
                android:textColor="@color/navy_blue"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/actualizacion_creditos"
                    android:textAlignment="viewStart"
                    android:textColor="@color/navy_blue"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/date_creditos"
                    android:textAlignment="center"
                    android:textColor="@color/navy_blue"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>