<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PracticaFormsActivity">

    <ImageButton
        android:id="@+id/ibBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        app:tint="?attr/colorOnBackground" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibBackButton">

        <LinearLayout
            android:id="@+id/linearLayoutInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="5dp"
                app:srcCompat="@drawable/ic_practica_mini_icon" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/practica_button"
                android:textColor="@color/star_command_blue"
                android:textSize="28sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvPracticaInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/practica_description"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/linearLayoutInfo"
            app:layout_constraintStart_toStartOf="@+id/linearLayoutInfo"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutInfo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:hint="@string/name_label"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:textColorHint="?attr/colorSecondary"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="?attr/colorSecondary"
            app:layout_constraintEnd_toEndOf="@+id/tvPracticaInfo"
            app:layout_constraintStart_toStartOf="@+id/tvPracticaInfo"
            app:layout_constraintTop_toBottomOf="@+id/tvPracticaInfo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="?attr/colorSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/id_label"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:textColorHint="?attr/colorSecondary"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="?attr/colorSecondary"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldName"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldName"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etIdField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/navy_blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldGroup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/group_label"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:textColorHint="?attr/colorSecondary"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="?attr/colorSecondary"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldId"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldId"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGroupField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="?attr/colorSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnStartPractice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:backgroundTint="@color/columbia_blue"
            android:fontFamily="@font/montserrat_semi_bold"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/start_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/star_command_blue"
            android:textSize="34sp"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldGroup"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldGroup"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldGroup" />

        <TextView
            android:id="@+id/tvPracticeWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/advertencia"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btnStartPractice"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldGroup"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldGroup"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldGroup"
            app:layout_constraintVertical_bias="0.52" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>